kubernetes/merged/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaming-app-ingress
  namespace: gaming-app-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gaming-app-service
                port:
                  number: 80
    - host: gaming-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gaming-app-service
                port:
                  number: 80
